# unnamed

./: .gitignore  Pipfile  Procfile  cert.pem  db2.sqlite3  key.pem  manage.py  package-lock.json  pyproject.toml  req.txt  requirements.txt  schema.py
api/: admin.py  apps.py  changeTime.py  models.py  schema.py  signals.py  urls.py
api/migrations/: 0001_initial.py  0002_auto_20200801_1437.py  0002_auto_20201013_0947.py  0002_comment_creation.py  0002_delete_following.py  0003_auto_20200802_1201.py  0003_auto_20200829_1254.py  0003_following.py  0003_post_context.py  0004_auto_20200802_1217.py  0004_notification.py  0004_remove_post_context.py  0005_auto_20200802_1229.py  0005_remove_notification_verb.py  0005_remove_post_creation.py  0006_auto_20200802_1230.py  0006_post_creation.py  0006_user_image.py  0007_auto_20200802_1648.py  0007_auto_20200830_1016.py  0007_auto_20201009_1447.py  0008_auto_20200830_1108.py  0008_comment_like_post.py  0009_auto_20200803_1849.py  0009_remove_user_bio.py  0010_auto_20200803_1903.py  0010_user_bio.py  0011_following.py  0012_auto_20200804_0936.py  0013_user_is_verified.py  0014_auto_20200804_1022.py  0015_post_liked.py  0016_auto_20200811_1733.py  0017_auto_20200815_0922.py  0018_comment_creation.py
api/schema/: Nodes.py  mutations.py  queries.py
api/schemafiles/: Nodes.py  mutations.py
feel/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
frontend/: .babelrc  .gitignore  Babel.config.js  package-lock.json  package.json  urls.py  views.py  webpack.config.js
staticfiles/: staticfiles.json
utils/: models.py
(+2080 files in other folders)
